# SandwichMath

./: CMakeLists.txt  LICENSE  README.md
private/: Matrix.cpp  Quaternion.cpp  Vector.cpp
public/: MathTemplateUtil.h  MathUtil.h  Matrix.h  Point.h  Projection.h  Quaternion.h  Vector.h
